edits in API, errors, docker, added base class
