# static/swagger.json
@@ -6,7 +6,7 @@
     "version": "1.0"
   },
   "paths": {
-    "/todo/api/v1/tasks": {
+    "/api/v1/tasks": {
       "get": {
         "summary": "Get all tasks",
         "responses": {
@@ -49,7 +49,7 @@
         }
       }
     },
-    "/todo/api/v1/tasks/{id}": {
+    "/api/v1/tasks/{id}": {
       "get": {
         "summary": "Get a task by ID",
         "parameters": [
